# crewai-agents

./: .env.example  .gitignore  README.md  agents.py  crew.py  pyproject.toml  requirements.txt  tasks.py  tools.py
firstcrew/: pyproject.toml
firstcrew/src/firstcrew/: crew.py  llm.py  main.py
workplace_automation_crew/: .env.example  .gitignore  README.md  pyproject.toml
workplace_automation_crew/knowledge/: ai_automation_tools.md  automation_patterns.md  roi_framework.md  rpa_and_workflow_tools.md
workplace_automation_crew/src/workplace_automation_crew/: crew.py  llm.py  main.py
workplace_automation_crew/src/workplace_automation_crew/config/: agents.yaml  tasks.yaml
